// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basics/BaseButton With Action 1`] = `
<button
  alt="button"
  class="large text-h3 font-h3 flex items-center justify-center base-button solid js-button"
  data-cy="js-button"
  size="large"
  title="button"
  type="submit"
>
  <!---->
   
  <!---->
   
  <!---->
   Click Me 
  <!---->
</button>
`;

exports[`Storyshots Basics/BaseButton With Async Action 1`] = `
<button
  alt="button"
  class="large text-h3 font-h3 flex items-center justify-center base-button solid js-button"
  data-cy="js-button"
  size="large"
  title="button"
  type="submit"
>
  <!---->
   
  <!---->
   
  <!---->
   Load for 1 Second 
  <!---->
</button>
`;

exports[`Storyshots Basics/BaseButton With Custom Icon 1`] = `
<button
  alt="button"
  class="large text-h3 font-h3 flex items-center justify-center base-button outline js-button"
  data-cy="js-button"
  size="large"
  title="button"
  type="submit"
>
  <!---->
   
  <!---->
   
  <div
    class="m-1 flex items-center base-icon js-  "
    title=""
  >
    <img
      alt=""
      class="ccu-icon cursor-pointer medium"
      src="IMAGE_MOCK"
    />
     
  </div>
   Button 
  <!---->
</button>
`;

exports[`Storyshots Basics/BaseButton With Icon 1`] = `
<button
  alt="button"
  class="large text-h3 font-h3 flex items-center justify-center base-button solid js-button"
  data-cy="js-button"
  size="large"
  title="button"
  type="submit"
>
  <!---->
   
  <svg
    aria-hidden="true"
    class="m-1 svg-inline--fa fa-file fa-w-12 fa-sm"
    data-icon="file"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 384 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      class=""
      d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm160-14.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"
      fill="currentColor"
    />
  </svg>
   
  <!---->
   Button 
  <!---->
</button>
`;

exports[`Storyshots Basics/BaseButton With Sizes 1`] = `
<div>
  <div
    class="m-4"
  >
    <button
      alt="button"
      class="small text-bodysm font-bodysm flex items-center justify-center base-button solid js-button"
      data-cy="js-button"
      size="small"
      title="button"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <!---->
       Small 
      <!---->
    </button>
  </div>
  <div
    class="m-4"
  >
    <button
      alt="button"
      class="medium text-sans text-h4 font-h4 flex items-center justify-center base-button solid js-button"
      data-cy="js-button"
      size="medium"
      title="button"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <!---->
       Medium 
      <!---->
    </button>
  </div>
  <div
    class="m-4"
  >
    <button
      alt="button"
      class="large text-h3 font-h3 flex items-center justify-center base-button solid js-button"
      data-cy="js-button"
      size="large"
      title="button"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <!---->
       Large 
      <!---->
    </button>
  </div>
</div>
`;

exports[`Storyshots Basics/BaseButton With Text 1`] = `
<button
  alt="button"
  class="large text-h3 font-h3 flex items-center justify-center base-button solid js-button"
  data-cy="js-button"
  size="large"
  title="button"
  type="submit"
>
  <!---->
   
  <!---->
   
  <!---->
   Button 
  <!---->
</button>
`;

exports[`Storyshots Basics/BaseButton With Variants 1`] = `
<div>
  <div
    class="m-4"
  >
    <button
      alt="button"
      class="large text-h3 font-h3 flex items-center justify-center base-button solid js-button"
      data-cy="js-button"
      size="large"
      title="button"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <!---->
       Solid 
      <!---->
    </button>
  </div>
  <div
    class="m-4"
  >
    <button
      alt="button"
      class="large text-h3 font-h3 flex items-center justify-center base-button outline js-button"
      data-cy="js-button"
      size="large"
      title="button"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <!---->
       Outline 
      <!---->
    </button>
  </div>
  <div
    class="m-4"
  >
    <button
      alt="button"
      class="large text-h3 font-h3 flex items-center justify-center base-button text js-button"
      data-cy="js-button"
      size="large"
      title="button"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <!---->
       Text 
      <!---->
    </button>
  </div>
</div>
`;

exports[`Storyshots Basics/BaseCheckbox Disabled 1`] = `
<label
  class="checkbox-container"
>
  Disabled 
  <input
    class="checkmark-input"
    disabled="disabled"
    type="checkbox"
  />
   
  <span
    class="checkmark"
  />
</label>
`;

exports[`Storyshots Basics/BaseCheckbox With Text 1`] = `
<label
  class="checkbox-container"
>
  Check Me 
  <input
    class="checkmark-input"
    type="checkbox"
  />
   
  <span
    class="checkmark"
  />
</label>
`;

exports[`Storyshots Basics/BaseIcon All Icon Sizes 1`] = `
<div
  class="flex flex-wrap"
>
  <div
    class="flex flex-col border-2 text-center justify-end"
  >
    <div
      class="m-6 flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xxs"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      xxs
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center justify-end"
  >
    <div
      class="m-6 flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xs"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      xs
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center justify-end"
  >
    <div
      class="m-6 flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer tiny"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      tiny
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center justify-end"
  >
    <div
      class="m-6 flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer small"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      sm
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center justify-end"
  >
    <div
      class="m-6 flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer small"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      small
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center justify-end"
  >
    <div
      class="m-6 flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer medium"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      md
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center justify-end"
  >
    <div
      class="m-6 flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer medium"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      medium
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center justify-end"
  >
    <div
      class="m-6 flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer large"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      lg
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center justify-end"
  >
    <div
      class="m-6 flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer large"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      large
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center justify-end"
  >
    <div
      class="m-6 flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      xl
    </p>
  </div>
</div>
`;

exports[`Storyshots Basics/BaseIcon All Icons 1`] = `
<div
  class="flex flex-wrap"
>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      add-orange
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      dashboard
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      cases
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      reports
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      calendar
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      call
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      chat
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      drag
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      settings
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      print
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      pin
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      phone
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      phone-classic
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      phone-user
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      phone-hangup
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      phone-plus
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      earth-globe
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      phone-contact-add
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      phone-exit
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      share
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      download
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      active
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      edit
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      flag
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      filters
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      flag-filled
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      search
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      table
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      map
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      layers
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      info
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      information
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      trash
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      organization
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      admin
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      history
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      cancel
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      help
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      up
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      down
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      updown
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      go-case
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      map-buffer
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      map-circle
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      map-poly
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      map-rect
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      map-sweep
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      map-undo
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      map-redo
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      otherorg
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      dialer
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      hangup
    </p>
  </div>
  <div
    class="flex flex-col border-2 text-center"
  >
    <div
      class="m-8 align-self-center flex items-center base-icon js-  "
      title=""
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer xl"
        src="IMAGE_MOCK"
      />
       
    </div>
     
    <p>
      time
    </p>
  </div>
</div>
`;

exports[`Storyshots Basics/BaseIcon Simple Icon 1`] = `
<div
  class="flex items-center base-icon js-  "
  title=""
>
  <img
    alt=""
    class="ccu-icon cursor-pointer large"
    src="IMAGE_MOCK"
  />
   
</div>
`;

exports[`Storyshots Basics/BaseInput Disabled 1`] = `
<div
  class="flex justify-start relative items-center"
>
  <!---->
   
  <input
    autocomplete="off"
    class="flex-grow p-1 text-base large"
    data-cy=""
    disabled="disabled"
    pattern=".*"
    placeholder=""
    rows="0"
    type="search"
  />
   
  <!---->
   
  <!---->
   
  <!---->
   
</div>
`;

exports[`Storyshots Basics/BaseInput Disabled Break Glass 1`] = `
<div
  class="flex justify-start relative items-center"
>
  <!---->
   
  <input
    autocomplete="off"
    class="flex-grow p-1 text-base large"
    data-cy=""
    disabled="disabled"
    pattern=".*"
    placeholder=""
    rows="0"
    type="search"
  />
   
  <div
    class="icon-container flex items-center justify-center large"
  >
    <div
      class="js-break-glass flex items-center base-icon js-actions-edit  "
      data-cy="js-break-glass"
      title="actions.edit"
    >
      <img
        alt="actions.edit"
        class="ccu-icon cursor-pointer small"
        src="IMAGE_MOCK"
      />
       
    </div>
  </div>
   
  <!---->
   
  <!---->
   
</div>
`;

exports[`Storyshots Basics/BaseInput Simple 1`] = `
<div
  class="flex justify-start relative items-center"
>
  <!---->
   
  <input
    autocomplete="off"
    class="flex-grow p-1 text-base large"
    data-cy=""
    pattern=".*"
    placeholder=""
    rows="0"
    type="search"
  />
   
  <!---->
   
  <!---->
   
  <!---->
   
</div>
`;

exports[`Storyshots Basics/BaseInput With Icon 1`] = `
<div
  class="flex justify-start relative items-center"
>
  <!---->
   
  <input
    autocomplete="off"
    class="flex-grow p-1 text-base large has-icon"
    data-cy=""
    pattern=".*"
    placeholder=""
    rows="0"
    type="search"
  />
   
  <!---->
   
  <div
    class="icon-container flex items-center justify-center large"
  >
    <div
      class="flex items-center base-icon js-actions-help-alt  "
      title="actions.help_alt"
    >
      <img
        alt="actions.help_alt"
        class="ccu-icon cursor-pointer small"
        src="IMAGE_MOCK"
      />
       
    </div>
  </div>
   
  <!---->
   
</div>
`;

exports[`Storyshots Basics/BaseInput With Placeholder 1`] = `
<div
  class="flex justify-start relative items-center"
>
  <!---->
   
  <input
    autocomplete="off"
    class="flex-grow p-1 text-base large"
    data-cy=""
    pattern=".*"
    placeholder="Some placeholder"
    rows="0"
    type="search"
  />
   
  <!---->
   
  <!---->
   
  <!---->
   
</div>
`;

exports[`Storyshots Basics/BaseInput With Sizes 1`] = `
<div>
  <div
    class="m-4"
  >
    <div
      class="flex justify-start relative items-center"
    >
      <!---->
       
      <input
        autocomplete="off"
        class="flex-grow p-1 text-base"
        data-cy=""
        disabled="disabled"
        pattern=".*"
        placeholder=""
        rows="0"
        type="search"
      />
       
      <!---->
       
      <!---->
       
      <!---->
       
    </div>
  </div>
  <div
    class="m-4"
  >
    <div
      class="flex justify-start relative items-center"
    >
      <!---->
       
      <input
        autocomplete="off"
        class="flex-grow p-1 text-base large"
        data-cy=""
        disabled="disabled"
        pattern=".*"
        placeholder=""
        rows="0"
        type="search"
      />
       
      <!---->
       
      <!---->
       
      <!---->
       
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics/BaseInput With Tooltip 1`] = `
<div
  class="flex justify-start relative items-center"
>
  <!---->
   
  <input
    autocomplete="off"
    class="flex-grow p-1 text-base large has-tooltip"
    data-cy=""
    pattern=".*"
    placeholder=""
    rows="0"
    type="search"
  />
   
  <!---->
   
  <div
    class="icon-container flex items-center justify-center large has-tooltip"
    data-original-title="null"
  >
    <div
      class="flex items-center base-icon js-actions-help-alt  "
      title="actions.help_alt"
    >
      <img
        alt="actions.help_alt"
        class="ccu-icon cursor-pointer small"
        src="IMAGE_MOCK"
      />
       
    </div>
  </div>
   
  <!---->
   
</div>
`;

exports[`Storyshots Basics/BaseLink As Anchor 1`] = `
<a
  class="link"
  href="www.google.com"
  target=""
>
  <p
    class="text-body font-body text-crisiscleanup-dark-500 font-sans subpixel-antialiased"
  >
    As Anchor
  </p>
</a>
`;

exports[`Storyshots Basics/BaseLink As Router Link 1`] = `
<a
  aria-current="page"
  class="link router-link-exact-active router-link-active"
  href=""
  target=""
>
  <p
    class="text-body font-body text-crisiscleanup-dark-500 font-sans subpixel-antialiased"
  >
    As router-link
  </p>
</a>
`;

exports[`Storyshots Basics/BaseLink With Defaults 1`] = `
<a
  class="link"
  href=""
  target=""
>
  <p
    class="text-body font-body text-crisiscleanup-dark-500 font-sans subpixel-antialiased"
  >
    Link
  </p>
</a>
`;

exports[`Storyshots Basics/BaseLink With Text Variant 1`] = `
<a
  class="link"
  href=""
  target=""
>
  <p
    class="text-h1 font-h1 text-crisiscleanup-dark-400 font-sans subpixel-antialiased"
  >
    H1 Link
  </p>
</a>
`;

exports[`Storyshots Basics/BaseRadio With Basics 1`] = `
<label
  class="z-50 flex items-center"
>
  <input
    class=""
    name="My Radio"
    type="radio"
    value="radio1"
  />
   
  <span>
    
      My Radio
    
  </span>
</label>
`;

exports[`Storyshots Elements/Accordion With Card 1`] = `
<div
  class="relative"
>
  <!---->
   
  <div
    class="bg-white shadow-crisiscleanup-card card h-full"
  >
    <div
      class="header"
      slot="header"
    >
      <div
        class="header--inner"
      >
        <div
          class="left py-4 px-6"
        >
          <p
            class="text-h3 font-h3 text-crisiscleanup-dark-500 font-sans subpixel-antialiased"
            style="font-weight: 700;"
          >
            
          [
  "Example Accordion"
]
        
          </p>
        </div>
         
        <div
          class="right"
        >
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="body"
    >
      <div
        class="body--inner h-full"
      >
         
        <div
          class="m-16"
        >
          <div
            class="accordion"
          >
            <div
              class="accordion__card"
            >
              <div
                class="primary-dark flex items-center base-icon js-actions-show-details with-text  accordion__title"
                title="actions.show_details"
                variant="h3"
              >
                <svg
                  alt="actions.show_details"
                  aria-hidden="true"
                  class="svg-inline--fa fa-chevron-down fa-w-14 fa-sm ccu-icon cursor-pointer small text"
                  data-icon="chevron-down"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class=""
                    d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                    fill="currentColor"
                  />
                </svg>
                 
                <p
                  class="crisiscleanup-dark-400 text-h3 font-h3 text-crisiscleanup-dark-500 font-sans subpixel-antialiased"
                >
                  
          One
        
                </p>
              </div>
               
              <div
                class="accordion__body"
              >
                
        One
      
              </div>
            </div>
            <div
              class="accordion__card"
            >
              <div
                class="primary-dark flex items-center base-icon js-actions-show-details with-text  accordion__title accordion__title--active"
                title="actions.show_details"
                variant="h3"
              >
                <svg
                  alt="actions.show_details"
                  aria-hidden="true"
                  class="svg-inline--fa fa-chevron-down fa-w-14 fa-sm ccu-icon cursor-pointer small text"
                  data-icon="chevron-down"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class=""
                    d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                    fill="currentColor"
                  />
                </svg>
                 
                <p
                  class="crisiscleanup-dark-400 text-h3 font-h3 text-crisiscleanup-dark-500 font-sans subpixel-antialiased"
                >
                  
          Two
        
                </p>
              </div>
               
              <div
                class="accordion__body--active accordion__body"
              >
                
        Two
      
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Elements/Accordion With Components 1`] = `
<div
  class="relative"
>
  <!---->
   
  <div
    class="bg-white shadow-crisiscleanup-card card h-full"
  >
    <div
      class="header"
      slot="header"
    >
      <div
        class="header--inner"
      >
        <div
          class="left py-4 px-6"
        >
          <p
            class="text-h3 font-h3 text-crisiscleanup-dark-500 font-sans subpixel-antialiased"
            style="font-weight: 700;"
          >
            
          [
  "Example with Components"
]
        
          </p>
        </div>
         
        <div
          class="right"
        >
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="body"
    >
      <div
        class="body--inner h-full"
      >
         
        <div
          class="m-16"
        >
          <div
            class="accordion"
          >
            <div
              class="accordion__card"
            >
              <p
                class="bg-blue-500 p-6 text-body font-body text-crisiscleanup-dark-500 font-sans subpixel-antialiased"
              >
                Custom Title Component
              </p>
               
              <div
                class="accordion__body--active accordion__body"
              >
                <p
                  class="text-body font-body text-crisiscleanup-dark-500 font-sans subpixel-antialiased"
                >
                  I am a custom component
                </p>
              </div>
            </div>
            <div
              class="accordion__card"
            >
              <div
                class="primary-dark flex items-center base-icon js-actions-show-details with-text  accordion__title"
                title="actions.show_details"
                variant="h3"
              >
                <svg
                  alt="actions.show_details"
                  aria-hidden="true"
                  class="svg-inline--fa fa-chevron-down fa-w-14 fa-sm ccu-icon cursor-pointer small text"
                  data-icon="chevron-down"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class=""
                    d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                    fill="currentColor"
                  />
                </svg>
                 
                <p
                  class="crisiscleanup-dark-400 text-h3 font-h3 text-crisiscleanup-dark-500 font-sans subpixel-antialiased"
                >
                  
          Two
        
                </p>
              </div>
               
              <div
                class="accordion__body"
              >
                
        Two
      
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Elements/Accordion With Dynamic Props 1`] = `
<div
  class="accordion"
>
  <div
    class="accordion__card"
  >
    <div
      class="primary-dark flex items-center base-icon js-actions-show-details with-text  accordion__title accordion__title--active"
      title="actions.show_details"
      variant="h3"
    >
      <svg
        alt="actions.show_details"
        aria-hidden="true"
        class="svg-inline--fa fa-chevron-down fa-w-14 fa-sm ccu-icon cursor-pointer small text"
        data-icon="chevron-down"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class=""
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
        />
      </svg>
       
      <p
        class="crisiscleanup-dark-400 text-h3 font-h3 text-crisiscleanup-dark-500 font-sans subpixel-antialiased"
      >
        
          One
        
      </p>
    </div>
     
    <div
      class="accordion__body--active accordion__body"
    >
      
        One
      
    </div>
  </div>
  <div
    class="accordion__card"
  >
    <div
      class="primary-dark flex items-center base-icon js-actions-show-details with-text  accordion__title"
      title="actions.show_details"
      variant="h3"
    >
      <svg
        alt="actions.show_details"
        aria-hidden="true"
        class="svg-inline--fa fa-chevron-down fa-w-14 fa-sm ccu-icon cursor-pointer small text"
        data-icon="chevron-down"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class=""
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
        />
      </svg>
       
      <p
        class="crisiscleanup-dark-400 text-h3 font-h3 text-crisiscleanup-dark-500 font-sans subpixel-antialiased"
      >
        
          Two
        
      </p>
    </div>
     
    <div
      class="accordion__body"
    >
      
        Two
      
    </div>
  </div>
  <div
    class="accordion__card"
  >
    <div
      class="primary-dark flex items-center base-icon js-actions-show-details with-text  accordion__title"
      title="actions.show_details"
      variant="h3"
    >
      <svg
        alt="actions.show_details"
        aria-hidden="true"
        class="svg-inline--fa fa-chevron-down fa-w-14 fa-sm ccu-icon cursor-pointer small text"
        data-icon="chevron-down"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class=""
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
        />
      </svg>
       
      <p
        class="crisiscleanup-dark-400 text-h3 font-h3 text-crisiscleanup-dark-500 font-sans subpixel-antialiased"
      >
        
          Three
        
      </p>
    </div>
     
    <div
      class="accordion__body"
    >
      
        Three
      
    </div>
  </div>
  <div
    class="accordion__card"
  >
    <div
      class="primary-dark flex items-center base-icon js-actions-show-details with-text  accordion__title"
      title="actions.show_details"
      variant="h3"
    >
      <svg
        alt="actions.show_details"
        aria-hidden="true"
        class="svg-inline--fa fa-chevron-down fa-w-14 fa-sm ccu-icon cursor-pointer small text"
        data-icon="chevron-down"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class=""
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
        />
      </svg>
       
      <p
        class="crisiscleanup-dark-400 text-h3 font-h3 text-crisiscleanup-dark-500 font-sans subpixel-antialiased"
      >
        
          Four
        
      </p>
    </div>
     
    <div
      class="accordion__body"
    >
      
        Four
      
    </div>
  </div>
</div>
`;

exports[`Storyshots Elements/Badge With Defaults 1`] = `
<div
  class="badge flex items-center justify-center rounded-full"
  style="width: 10px; height: 10px;"
>
  <div>
    15
  </div>
</div>
`;

exports[`Storyshots Elements/Badge With Props 1`] = `
<div
  class="badge flex items-center justify-center rounded-full text-white bg-red-600"
  style="width: 33px; height: 33px;"
>
  <div>
    25
  </div>
</div>
`;

exports[`Storyshots Elements/Cards/CaseCard As Static 1`] = `
<div
  class="flex"
>
  <div
    class="mx-3 case-card"
    full-address="123 New Street"
  >
    <!---->
     
    <div
      class="case--head"
    >
      <div
        class="case--svg"
      />
       
      <!---->
       
      <div
        class="case--title flex"
      >
        <p
          class="text-h3 font-h3 text-crisiscleanup-dark-500 font-sans subpixel-antialiased"
        >
          X23
        </p>
      </div>
    </div>
     
    <div
      class="case--body"
    >
      <p
        class="text-bodysm font-bodysm font-sans subpixel-antialiased"
      >
        123 New Street, NY
      </p>
    </div>
  </div>
   
  <div
    class="case-card small"
    full-address="123 New Street"
    small="true"
  >
    <!---->
     
    <div
      class="case--head"
    >
      <div
        class="case--svg"
      />
       
      <!---->
       
      <div
        class="case--title flex"
      >
        <p
          class="text-h3 font-h3 text-crisiscleanup-dark-500 font-sans subpixel-antialiased"
        >
          X23
        </p>
      </div>
    </div>
     
    <div
      class="case--body"
    >
      <p
        class="text-bodysm font-bodysm font-sans subpixel-antialiased"
      >
        123 New Street, NY
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Elements/Cards/CaseCard Basic 1`] = `
<div
  class="flex"
>
  <div
    class="mx-3 case-card interactive"
    full-address="123 New Street"
    interactive="true"
  >
    <!---->
     
    <div
      class="case--head"
    >
      <div
        class="case--svg"
      />
       
      <!---->
       
      <div
        class="case--title flex"
      >
        <p
          class="text-h3 font-h3 text-crisiscleanup-dark-500 font-sans subpixel-antialiased"
        >
          X23
        </p>
      </div>
    </div>
     
    <div
      class="case--body"
    >
      <p
        class="text-bodysm font-bodysm font-sans subpixel-antialiased"
      >
        123 New Street, NY
      </p>
    </div>
  </div>
   
  <div
    class="case-card interactive small"
    full-address="123 New Street"
    interactive="true"
    small="true"
  >
    <!---->
     
    <div
      class="case--head"
    >
      <div
        class="case--svg"
      />
       
      <!---->
       
      <div
        class="case--title flex"
      >
        <p
          class="text-h3 font-h3 text-crisiscleanup-dark-500 font-sans subpixel-antialiased"
        >
          X23
        </p>
      </div>
    </div>
     
    <div
      class="case--body"
    >
      <p
        class="text-bodysm font-bodysm font-sans subpixel-antialiased"
      >
        123 New Street, NY
      </p>
    </div>
  </div>
</div>
`;
